--- a/folder/projects/defaultproject/constrainttemplates/k8sallowedrepos.yaml
+++ b/folder/projects/defaultproject/constrainttemplates/k8sallowedrepos.yaml
@@ -1,8 +1,13 @@
 apiVersion: opa.k8smgmt.io/v3
 kind: ConstraintTemplate
 metadata:
+  id: yemp028
+  modifiedAt:
+    nanos: 409558000
+    seconds: 1634757169
   name: k8sallowedrepos
   project: defaultproject
+  projectID: rx28oml
 spec:
   artifact:
     artifact:
