--- a/folder2/projects/defaultproject/pipelines/new-sync-job.yaml
+++ b/folder2/projects/defaultproject/pipelines/new-sync-job.yaml
@@ -3,12 +3,13 @@ kind: Pipeline
 metadata:
   id: 4qkolkn
   modifiedAt:
-    nanos: 542729000
-    seconds: 1635132472
+    nanos: 42284000
+    seconds: 1635132641
   name: new-sync-job
   project: defaultproject
   projectID: rx28oml
 spec:
+  active: true
   sharing: {}
   stages:
   - config:
