--- a/folder2/projects/defaultproject/constrainttemplates/k8scontainerlimits.yaml
+++ b/folder2/projects/defaultproject/constrainttemplates/k8scontainerlimits.yaml
@@ -9,4 +9,4 @@ spec:
       paths:
       - name: file://artifacts/k8scontainerlimits/template1.yml
     options: {}
-    type: Helmwqwq
+    type: Helm
