--- a/folder3/projects/defaultproject/addons/artifacts/test-versions/test-versions.yaml
+++ b/folder3/projects/defaultproject/addons/artifacts/test-versions/test-versions.yaml
@@ -1,12 +1,14 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
-kind: K8sAllowedRepos
+kind: K8sAllowedLimits
 metadata:
-  name: container-must-have-limits
+  name: repo-is-openpolicyagent
 spec:
   match:
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
+    namespaces:
+      - "default"
   parameters:
-    cpu: "200m"
-    memory: "1Gi"
+    repos:
+      - "openpolicyagent/"
