--- a/folder3/projects/defaultproject/policies/shared.yaml
+++ b/folder3/projects/defaultproject/policies/shared.yaml
@@ -3,15 +3,15 @@ kind: Policy
 metadata:
   id: gdk6g21
   modifiedAt:
-    nanos: 418848000
-    seconds: 1635912670
+    nanos: 482504000
+    seconds: 1635926318
   name: shared
   project: defaultproject
   projectID: rx28oml
 spec:
   constraintList:
-  - {}
-  - {}
+  - name: catorgorg
+  - name: repo-is-openpolicyagent
   excludedNamespaces:
   - namespaces:
     - name: default-rafay-system
@@ -30,4 +30,4 @@ spec:
   syncObjects:
   - kind: Pod
     version: v1
-  version: v2
+  version: version1
