--- a/folder3/projects/defaultproject/policies/testpolicycreate.yaml
+++ b/folder3/projects/defaultproject/policies/testpolicycreate.yaml
@@ -1,7 +1,7 @@
 apiVersion: opa.k8smgmt.io/v3
 kind: Policy
 metadata:
-  name: test-crea945
+  name: name-test1
   project: defaultproject
 spec:
   constraintList:
@@ -24,4 +24,4 @@ spec:
       name: three
     - id: 4qkolkn
       name: two
-  version: versionhere
+  version: v1
