--- a/folder3/projects/defaultproject/pipelines/new-sync-job.yaml
+++ b/folder3/projects/defaultproject/pipelines/new-sync-job.yaml
@@ -3,12 +3,13 @@ kind: Pipeline
 metadata:
   id: 4qkolkn
   modifiedAt:
-    nanos: 385903000
-    seconds: 1636269890
+    nanos: 982192000
+    seconds: 1636270050
   name: new-sync-job
   project: defaultproject
   projectID: rx28oml
 spec:
+  active: true
   sharing: {}
   stages:
   - config:
