Resource Blueprint/test, Create

--- a/folder3/projects/defaultproject/blueprints/test.yaml
+++ b/folder3/projects/defaultproject/blueprints/test.yaml
@@ -4,8 +4,8 @@ metadata:
   description: df. erd wrdwdf v
   id: x3mxvkr
   modifiedAt:
-    nanos: 644566000
-    seconds: 1636361128
+    nanos: 60479000
+    seconds: 1636361171
   name: test
   project: defaultproject
   projectID: rx28oml
@@ -30,4 +30,4 @@ spec:
       name: three
     - id: 4qkolkn
       name: two
-  version: new-ver
+  version: version1
