--- a/folder3/projects/defaultproject/blueprints/asdasd.yaml
+++ b/folder3/projects/defaultproject/blueprints/asdasd.yaml
@@ -2,14 +2,15 @@ apiVersion: infra.k8smgmt.io/v3
 kind: Blueprint
 metadata:
   description: asdasdasasdasd
-  id: wg29ek0
-  modifiedAt:
-    nanos: 721844000
-    seconds: 1634810884
   name: asdasd
   project: defaultproject
-  projectID: rx28oml
 spec:
-  defaultAddons: {}
-  drift: {}
-  sharing: {}
+  defaultAddons:
+    enableIngress: false
+    enableLogging: false
+    enableMonitoring: false
+    enableVM: false
+  drift:
+    enabled: false
+  sharing:
+    enabled: false
