--- a/folder3/projects/defaultproject/workloadtemplates/kjhv.yaml
+++ b/folder3/projects/defaultproject/workloadtemplates/kjhv.yaml
@@ -5,6 +5,8 @@ metadata:
   project: defaultproject
 spec:
   artifact:
-    artifact: {}
+    artifact:
+      paths:
+      - name: file://artifacts/kjhv/constraint1.yaml
     options: {}
     type: Yaml
