Resource Addon/opa-constraint-container-must-have-limits1, Update

--- a/folder3/projects/defaultproject/constraints/container-must-have-limits1.yaml
+++ b/folder3/projects/defaultproject/constraints/container-must-have-limits1.yaml
@@ -8,6 +8,7 @@ spec:
     artifact:
       paths:
       - name: file://artifacts/container-must-have-limits1/temp.yaml
-    options: {}
+    options:
+      force: true
     type: Yaml
   templateName: k8scontainerlimits
