Resource Workload/vault-tls-secret, Update

--- a/folder3/projects/defaultproject/addons/vault-tls-secret.yaml
+++ b/folder3/projects/defaultproject/addons/vault-tls-secret.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps.k8smgmt.io/v3
-kind: Workload
+apiVersion: infra.k8smgmt.io/v3
+kind: Addon
 metadata:
   name: vault-tls-secret
   project: defaultproject
@@ -10,9 +10,7 @@ spec:
       - name: file://artifacts/vault-tls-secret/vault-tls-secret.yaml
     options: {}
     type: Yaml
-  drift:
-    enabled: false
   namespace: newns
-  placement:
-    selector: rafay.dev/clusterName=mini
+  sharing:
+    enabled: false
   version: vault-tls-secret-v2
