Resource Workload/access-secret, Update

--- a/folder3/projects/defaultproject/addons/access-secret.yaml
+++ b/folder3/projects/defaultproject/addons/access-secret.yaml
@@ -1,16 +1,13 @@
 apiVersion: infra.k8smgmt.io/v3
 kind: Addon
 metadata:
-  name: vault-tls-secret
+  name: access-secret
   project: defaultproject
 spec:
   artifact:
-    artifact:
-      paths:
-      - name: file://artifacts/vault-tls-secret/vault-tls-secret.yaml
+    artifact: {}
     options: {}
     type: Yaml
   namespace: newns
   sharing:
     enabled: false
-  version: vault-tls-secret-v1
