--- a/folder3/projects/defaultproject/workloads/artifacts/access-secret/access-secret.yaml
+++ b/folder3/projects/defaultproject/workloads/artifacts/access-secret/access-secret.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: vault-auth-demo
+  labels:
+    app: wordpress
+    tier: frontend
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
