--- a/folder3/projects/defaultproject/workloads/artifacts/access-secret/access-secret.yaml
+++ b/folder3/projects/defaultproject/workloads/artifacts/access-secret/access-secret.yaml
@@ -1,4 +1,27 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: "pv-volume"
+spec:
+  capacity:
+    storage: "2Gi"
+  accessModes:
+    - "ReadWriteOnce"
+  hostPath:
+    path: /data
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: "wordpress-data-claim"
+spec:
+  accessModes:
+    - "ReadWriteOnce"
+  resources:
+    requests:
+      storage: "2Gi"
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: vault-auth-demo
