--- a/folder3/projects/defaultproject/workloads/test1.yaml
+++ b/folder3/projects/defaultproject/workloads/test1.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps.k8smgmt.io/v3
 kind: Workload
 metadata:
-  name: access-secret
+  name: test1
   project: defaultproject
 spec:
   artifact:
     artifact:
       paths:
-      - name: file://artifacts/access-secret/access-secret.yaml
+      - name: file://artifacts/test1/test1.yaml
     options: {}
     type: Yaml
   drift:
@@ -15,4 +15,4 @@ spec:
   namespace: newns
   placement:
     selector: rafay.dev/clusterName=mini
-  version: access-secret-v5
+  version: test1-v1
