--- a/folder3/projects/defaultproject/addons/multiyaml.yaml
+++ b/folder3/projects/defaultproject/addons/multiyaml.yaml
@@ -1,16 +1,13 @@
 apiVersion: infra.k8smgmt.io/v3
 kind: Addon
 metadata:
-  name: test1
+  name: multiyaml
   project: defaultproject
 spec:
   artifact:
-    artifact:
-      paths:
-      - name: file://artifacts/test1/test1.yaml
+    artifact: {}
     options: {}
     type: Yaml
   namespace: newns
   sharing:
     enabled: false
-  version: test1-v3
