Resource Workload/multiyaml, Update

--- a/folder3/projects/defaultproject/workloads/multiyaml.yaml
+++ b/folder3/projects/defaultproject/workloads/multiyaml.yaml
@@ -5,10 +5,13 @@ metadata:
   project: defaultproject
 spec:
   artifact:
-    artifact: {}
+    artifact:
+      paths:
+      - name: file://artifacts/multiyaml/multiyaml.yaml
     options: {}
     type: Yaml
   drift:
     enabled: false
   namespace: newns
-  placement: {}
+  placement:
+    selector: rafay.dev/clusterName=mini
