--- a/folder3/projects/defaultproject/addons/multiyaml.yaml
+++ b/folder3/projects/defaultproject/addons/multiyaml.yaml
@@ -5,7 +5,9 @@ metadata:
   project: defaultproject
 spec:
   artifact:
-    artifact: {}
+    artifact:
+      paths:
+      - name: file://artifacts/multiyaml/multiyaml.yaml
     options: {}
     type: Yaml
   namespace: newns
