Resource Policy/thisshouldwork, Update

--- a/folder3/projects/defaultproject/policies/thisshouldwork.yaml
+++ b/folder3/projects/defaultproject/policies/thisshouldwork.yaml
@@ -6,7 +6,5 @@ metadata:
 spec:
   installationParams: {}
   sharing:
-    enabled: true
-    projects:
-    - name: four
+    enabled: false
   version: v1
