--- a/folder3/projects/defaultproject/addons/testallyaml.yaml
+++ b/folder3/projects/defaultproject/addons/testallyaml.yaml
@@ -1,16 +1,15 @@
 apiVersion: infra.k8smgmt.io/v3
 kind: Addon
 metadata:
-  name: test1
+  name: testallyaml
   project: defaultproject
 spec:
   artifact:
     artifact:
       paths:
-      - name: file://artifacts/test1/test1.yaml
+      - name: file://artifacts/testallyaml/testallyaml.yaml
     options: {}
     type: Yaml
   namespace: newns
   sharing:
     enabled: false
-  version: test1-v3
