Resource Policy/name-test2, Create

--- a/folder3/projects/defaultproject/policies/name-test2.yaml
+++ b/folder3/projects/defaultproject/policies/name-test2.yaml
@@ -15,10 +15,12 @@ spec:
     - '*'
   installationParams:
     auditFromCache: true
+    auditInterval: 786
+    constraintViolationsLimit: 213
     enableDeleteOperations: true
   sharing:
     enabled: true
     projects:
     - name: three
     - name: two
-  version: v8
+  version: version1
