Manually Triggered System Sync

--- a/folder4/projects/defaultproject/pipelines/new-test.yaml
+++ b/folder4/projects/defaultproject/pipelines/new-test.yaml
@@ -4,7 +4,7 @@ metadata:
   name: new-test
   project: defaultproject
 spec:
-  active: false
+  active: true
   sharing:
     enabled: false
   stages:
